--- a/app/index.html
+++ b/app/index.html
@@ -8,16 +8,41 @@
  <!-- Bootstrap -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!--Fonts Googlle  -->
+	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 	
 
 
 	<!-- Custom styles for this template -->
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="sass/main.css">
 	<!-- Media Queries File 
  <link rel="stylesheet" href="css/media.css">-->
 </head>
 
 <body>
-	
+	<section class="buy-power">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-3">
+					<div class="sidebar">
+						<div class="sidebar-logo">
+						<img src="img/Path.png" alt="Path" class="sidebar-logo__img">
+						<img src="img/Ice_Rock.png" alt="Path" class="sidebar-logo__text">
+						<!-- <p class="logo-text">Ice Rock</p> -->
+					</div><!-- /.logo -->
+					<nav>
+						<ul class="sidebar-menu">
+							<li><a href="#" target="_blank">Диспетчерская</a></li>
+							<li><a href="#" target="_blank">Купить мощность</a></li>
+							<li><a href="#" target="_blank">Партнерская программа</a></li>
+							<li><a href="#" target="_blank">История</a></li>
+							<li><a href="#" target="_blank">Настройка</a></li>
+							<li><a href="#" target="_blank">Поддержка</a></li>
+						</ul>
+					</nav>
+					</div><!-- /.sidebar -->
+				</div><!-- /.col-lg-3 -->
+			</div><!-- /.row -->
+		</div><!-- /.container -->
+	</section><!-- /.menu -->
 </body>
 </html>
