add branch for  slider powerange

--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,8 @@
 
 	<!-- Custom styles for this template -->
 	<link rel="stylesheet" href="sass/main.css">
-	<!-- Media Queries File 
- <link rel="stylesheet" href="css/media.css">-->
+	<!--Библиотека poweranger (для ползунка)-->
+	<link href="css/powerange.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -110,7 +110,7 @@
           
 									</div><!-- /.page-power-body-row__panel -->
 									<div class="page-power-body-row__slider">
-										<input type="range" min="0" max="10000" value="500" step="100" class="slider" id="myRange" oninput="calc()">
+										<input type="text" min="0" max="10000" value="500" step="100" class="slider" id="myRange" oninput="calc()">
 									</div><!-- /.page-power-body-row__slider -->
 
 									<div class="page-power-body-row__btn">
@@ -143,7 +143,8 @@
 		</div><!-- /.container -->
 	</section><!-- /.menu -->
 
-
+<!--Библиотека poweranger (для ползунка)-->
+<script src="js/powerange.min.js"></script>
 	<script src='js/main.js'></script>
 
 </body>
